2001-05-21  Gary V. Vaughan  <gary@gnu.org>

	From Christian Holm Christensen <cholm@hehi03.nbi.dk>:
	* automake.in (lang_ppf77_rewrite):  This function should have
	been defined all along.
	(lang_ppf77_finish):  Fix the format of the rules we output.

2001-05-13  Gary V. Vaughan  <gary@gnu.org>

	* Makefile.in: Regenerated.
	From Peter Breitenlohner <peb@mppmu.mpg.de>:
	* Makefile.am (install-data-hook):  Take DESTDIR into account
	when calculating to installed scripts.

2001-05-12  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* automake.in (handle_dist): Fix makefile fragment emitted when a
	distcheck-hook is defined.

2001-05-10  Gary V. Vaughan  <gary@gnu.org>

	* configure.in (AM_INIT_AUTOMAKE):  Bumped the version number to
	1.4-p1a.

2001-05-08  Gary V. Vaughan  <gary@gnu.org>

	Automake 1.4-p1 was released.

	* Makefile.in: Regenerated.
	* aclocal.m4: Ditto.
	* m4/Makefile.in: Ditto.
	* tests/Makefile.in: Ditto.

	* NEWS:  Updated.

	* config.guess, config.sub: Updated from master copies at GNU.

	* configure.in (AM_INIT_AUTOMAKE): Set the fork identifier to
	patch level 1, 1.4-p1.
	Makefile.in:  Regenerated.
	configure: Ditto.
	stamp-vti: Ditto.
	version.texi: Ditto.

2001-05-08  Tom Tromey  <tromey@redhat.com>

	* automake.in (GNITS_VERSION_PATTERN): Document.  Added `fork
	identifier'.
	(handle_options): Handle fork identifier in version number.

2001-05-08  Gary V. Vaughan  <gary@gnu.org>

	* automake.in (libtoolize_files):  Removed ltconfig from this
	list, since it is not generated by libtool-1.4 or better.
	(libtoolize_sometimes):  List of files that are generated by
	some versions of libtoolize.
	(initialize_global_constants):  Also include files from
	libtoolize_sometimes in common_files.

	* automake.in (require_file_internal):  Fixed bogus error
	during file copy on 'automake --add-missing --copy'.  The
	result of the system() call is no longer negated.

	* automake.in (handle_dist_worker):  Typo.  Added the missing